Fixed overflow

--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -102,7 +102,7 @@ section {
 }
 
 body {
-	// overflow: hidden;
+	overflow-x: hidden;
 }
 
 .experiance-item-title {
